Store and retrieve hart rate ❤️

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.18.0",
-    "lifx-http-api": "^1.0.3"
+    "lifx-http-api": "^1.0.3",
+    "mongodb": "^3.0.4"
   },
   "devDependencies": {},
   "scripts": {
